6050.	[bug]		Changes to the RPZ response-policy min-update-interval
			and add-soa options now take effect as expected when
			named is reconfigured. [GL #3740]

6048.	[bug]		Fix a log message error in dns_catz_update_from_db(),
			where serials with values of 2^31 or larger were logged
			incorrectly as negative numbers. [GL #3742]

6045.	[cleanup]	The list of supported DNSSEC algorithms changed log
			level from "warning" to "notice" to match named's other
			startup messages. [GL !7217]

6044.	[bug]		There was an "RSASHA236" typo in a log message.
			[GL !7206]

	--- 9.16.36 released ---

6043.	[bug]		The key file IO locks objects would never get
			deleted from the hashtable due to off-by-one error.
			[GL #3727]

6042.	[bug]		ANY responses could sometimes have the wrong TTL.
			[GL #3613]

6040.	[bug]		Speed up the named shutdown time by explicitly
			canceling all recursing ns_client objects for
			each ns_clientmgr. [GL #3183]

6039.	[bug]		Removing a catalog zone from catalog-zones without
			also removing the referenced zone could leave a
			dangling pointer. [GL #3683]

6031.	[bug]		Move the "final reference detached" log message
			from dns_zone unit to the DEBUG(1) log level.
			[GL #3707]

6024.	[func]		Deprecate 'auto-dnssec'. [GL #3667]

6021.	[bug]		Use the current domain name when checking answers from
			a dual-stack-server. [GL #3607]

6020.	[bug]		Ensure 'named-checkconf -z' respects the check-wildcard
			option when loading a zone.  [GL #1905]

6017.	[bug]		The view's zone table was not locked when it should
			have been leading to race conditions when external
			extensions that manipulate the zone table where in
			use. [GL #3468]

	--- 9.16.35 released ---

6013.	[bug]		Fix a crash that could happen when you change
			a dnssec-policy zone with NSEC3 to start using
			inline-signing. [GL #3591]

6009.	[bug]		Don't trust a placeholder KEYDATA from the managed-keys
			zone by adding it into secroots. [GL #2895]
